# e-bor_example_module

./: CMakeLists.txt  README.md
TeamSpeak3-C-Query-API_headers/Ts3Api/: Server.hpp
src/: main.cpp
src/includes/: Module_interface.hpp
